Small improvements. Fixed tooltip from staying when button clicked, however noticed that it persists when hovered and selected. Fixed drop-down menu from becoming too large, instead supports internal scroll.

--- a/static/genedive/main.css
+++ b/static/genedive/main.css
@@ -206,3 +206,9 @@ h5 {
   font-size: 2.2em;
   color:rgb(128,128,128);
 }
+
+/* Typeahead listbox */
+.tt-menu {
+  max-height: 400px;
+  overflow-y: auto;
+}
